--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Senhas</title>
+  <title>GeradorDeSenhas</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
