--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br></br>
     <button id="btn" class="btn" type="submit" onclick="pegarTamanho()">Enviar</button>
     <h2 id="resultado" class="resultado"></h2>
-
+    <footer><div class="last">Gabriel 2022- Nenhum direito reservado</div></footer>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </body>
